<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_leaf"
    android:orientation="vertical"
    tools:context=".HasilPesananActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/box_transparantbig"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifSuccess"
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/checklist" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/pemesanan_berhasil"
            android:textColor="@color/dark_orange"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNoMeja"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/box_nomeja"
            android:fontFamily="@font/poppinsmedium"
            android:gravity="center"
            android:paddingTop="7dp"
            android:text="@string/cth_nomeja"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/box_transparantsmall"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp">

                <ImageView
                    android:id="@+id/ivIconMakanan"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/box_icon"
                    android:padding="6dp"
                    android:src="@drawable/icon_menu_makanan" />

                <TextView
                    android:id="@+id/tvlblPaketMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ivIconMakanan"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/menu_makanan"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNamaMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvlblPaketMenu"
                    android:layout_toRightOf="@id/ivIconMakanan"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/label_paket1"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:id="@+id/ivLine"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_pesanan"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/ivIconNamaPemesan"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/box_icon"
                    android:padding="6dp"
                    android:src="@drawable/icon_nama_pemesan" />

                <TextView
                    android:id="@+id/tvlblNamaPemesan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivIconNamaPemesan"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/nama_pemesan"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNamaPemesan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvlblNamaPemesan"
                    android:layout_toRightOf="@id/ivIconNamaPemesan"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cth_nama_pemesan"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/ivIconJumlah"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/box_icon"
                    android:padding="6dp"
                    android:src="@drawable/icon_jumlah" />

                <TextView
                    android:id="@+id/tvlblJumlahPesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivIconJumlah"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/jumlah"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvJumlahPesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvlblJumlahPesanan"
                    android:layout_toRightOf="@id/ivIconJumlah"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/cth_jumlah"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingVertical="5dp">

                <ImageView
                    android:id="@+id/ivIconSaus"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/box_icon"
                    android:padding="6dp"
                    android:src="@drawable/icon_saus" />

                <TextView
                    android:id="@+id/tvlblSaus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivIconSaus"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/tambahan"
                    android:textColor="@color/dark_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSaus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvlblSaus"
                    android:layout_toRightOf="@id/ivIconSaus"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/saus_tomat"
                    android:textColor="@color/semi_black"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnCekRiwayat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="@font/poppinssemibold"
            android:paddingTop="7dp"
            android:text="@string/cek_riwayat_pesanan"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>