<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/pesan_menu_anda"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/keterangan_pesan_menu"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                app:cardCornerRadius="12dp"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp">

                    <ImageView
                        android:id="@+id/ivIconMakanan"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/box_icon"
                        android:padding="6dp"
                        android:src="@drawable/icon_meja" />

                    <TextView
                        android:id="@+id/tvlblNoMeja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/ivIconMakanan"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/label_no_meja"
                        android:textColor="@color/dark_gray"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/edtNoMeja"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/box_edittext"
                        android:fontFamily="@font/poppinsregular"
                        android:gravity="center|center_vertical"
                        android:hint="@string/placeholder_no_meja"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:padding="7dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/ivLine"
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_below="@id/ivIconMakanan"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/tvlblNamaPemesan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ivLine"
                        android:layout_marginVertical="5dp"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/label_nama_pemesan"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtNamaPemesan"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/tvlblNamaPemesan"
                        android:background="@drawable/box_edittext"
                        android:fontFamily="@font/poppinsregular"
                        android:gravity="center|center_vertical"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="7dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="12dp"
                app:contentPadding="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvlblPilihMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/label_pilih_menu"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/rgPaketMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/box_radio"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingHorizontal="7dp"
                                android:paddingTop="10dp">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginBottom="3dp"
                                    android:src="@drawable/pict_paket1" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/label_paket1"
                                    android:textColor="@color/semi_black"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/menu_paket1"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <RadioButton
                                    android:id="@+id/rbPaket1"
                                    android:layout_width="30dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="-8dp"
                                    android:layout_marginBottom="-4dp"
                                    android:buttonTint="@color/orange"
                                    android:checked="true" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/box_radio"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingHorizontal="7dp">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="3dp"
                                    android:src="@drawable/pict_paket2" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/label_paket2"
                                    android:textColor="@color/semi_black"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/menu_paket2"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <RadioButton
                                    android:id="@+id/rbPaket2"
                                    android:layout_width="30dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="-8dp"
                                    android:layout_marginBottom="-4dp"
                                    android:buttonTint="@color/orange" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/box_radio"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:paddingHorizontal="10dp">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="3dp"
                                    android:src="@drawable/pict_paket3" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/label_paket3"
                                    android:textColor="@color/semi_black"
                                    android:textSize="14sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppinsmedium"
                                    android:text="@string/menu_paket3"
                                    android:textAlignment="center"
                                    android:textSize="11sp" />

                                <RadioButton
                                    android:id="@+id/rbPaket3"
                                    android:layout_width="30dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="-8dp"
                                    android:layout_marginBottom="-4dp"
                                    android:buttonTint="@color/orange" />

                            </LinearLayout>

                        </RadioGroup>
                    </LinearLayout>


                    <TextView
                        android:id="@+id/tvlblJumlahPesanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/jumlah"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/sbJumlahPesanan"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:max="9"
                        android:progressTint="@color/orange"
                        android:thumbTint="@color/orange" />

                    <TextView
                        android:id="@+id/tvJumlahPesanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvlblSaus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinssemibold"
                        android:text="@string/tambahan"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cbSausTomat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/orange"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/saus_tomat"
                            android:textSize="12sp" />

                        <CheckBox
                            android:id="@+id/cbSausPedas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/orange"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/saus_pedas"
                            android:textSize="12sp" />

                        <CheckBox
                            android:id="@+id/cbKecapManis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/orange"
                            android:fontFamily="@font/poppinsmedium"
                            android:text="@string/kecap_manis"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnPesan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/buat_pesanan"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>